--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,15 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.1.4.jar=C:\\Users\\USER\\Desktop\\Escritorio\\Nueva carpeta\\jcalendar-1.1.4.jar
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\USER\\Desktop\\Escritorio\\jdbc\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.raven-project-main.zip=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main.zip
+file.reference.TimingFramework-0.55.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.1.4.jar}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.raven-project-main.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
