--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,8 @@ excludes=
 file.reference.jcalendar-1.1.4.jar=C:\\Users\\USER\\Desktop\\Escritorio\\Nueva carpeta\\jcalendar-1.1.4.jar
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\USER\\Desktop\\Escritorio\\jdbc\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 file.reference.raven-project-main.zip=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main.zip
+file.reference.swing-worker-1.1.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\swing-worker-1.1.jar
+file.reference.swingx-1.6.1.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\swingx-1.6.1.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
@@ -45,7 +47,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.1.4.jar}:\
     ${file.reference.mysql-connector-j-8.1.0.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
-    ${file.reference.raven-project-main.zip}
+    ${file.reference.raven-project-main.zip}:\
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.swingx-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
