--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MundoTravel
 endorsed.classpath=
 excludes=
+file.reference.Escritorio-JDBC_demo=C:\\Users\\renzo\\OneDrive\\Escritorio\\JDBC demo
 file.reference.jcalendar-1.1.4.jar=C:\\Users\\USER\\Desktop\\Escritorio\\Nueva carpeta\\jcalendar-1.1.4.jar
+file.reference.JDBC_demo-mysql-connector-j-8.1.0=C:\\Users\\renzo\\OneDrive\\Escritorio\\JDBC demo\\mysql-connector-j-8.1.0
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\USER\\Desktop\\Escritorio\\jdbc\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\renzo\\OneDrive\\Escritorio\\JDBC demo\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 file.reference.raven-project-main.zip=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main.zip
 file.reference.swing-worker-1.1.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\swing-worker-1.1.jar
 file.reference.swingx-1.6.1.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\swingx-1.6.1.jar
@@ -49,7 +52,10 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.raven-project-main.zip}:\
     ${file.reference.swing-worker-1.1.jar}:\
-    ${file.reference.swingx-1.6.1.jar}
+    ${file.reference.swingx-1.6.1.jar}:\
+    ${file.reference.Escritorio-JDBC_demo}:\
+    ${file.reference.JDBC_demo-mysql-connector-j-8.1.0}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
