--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,9 +40,11 @@ file.reference.jcalendar-1.1.4.jar=C:\\Users\\USER\\Desktop\\Escritorio\\Nueva c
 file.reference.JDBC_demo-mysql-connector-j-8.1.0=C:\\Users\\renzo\\OneDrive\\Escritorio\\JDBC demo\\mysql-connector-j-8.1.0
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\USER\\Desktop\\Escritorio\\jdbc\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\renzo\\OneDrive\\Escritorio\\JDBC demo\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar-2=C:\\Users\\USER\\Desktop\\Escritorio\\LibraryJava\\jdbc\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 file.reference.raven-project-main.zip=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main.zip
 file.reference.swing-worker-1.1.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\swing-worker-1.1.jar
 file.reference.swingx-1.6.1.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\swingx-1.6.1.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Users\\USER\\Desktop\\Escritorio\\LibraryJava\\swift\\swingx-all-1.6.4.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\renzo\\OneDrive - Universidad Privada del Norte\\APACHE NETBEANS\\raven-project-main\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
@@ -55,7 +57,9 @@ javac.classpath=\
     ${file.reference.swingx-1.6.1.jar}:\
     ${file.reference.Escritorio-JDBC_demo}:\
     ${file.reference.JDBC_demo-mysql-connector-j-8.1.0}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar-1}
+    ${file.reference.mysql-connector-j-8.1.0.jar-1}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar-2}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
