--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,7 +59,8 @@ javac.classpath=\
     ${file.reference.JDBC_demo-mysql-connector-j-8.1.0}:\
     ${file.reference.mysql-connector-j-8.1.0.jar-1}:\
     ${file.reference.mysql-connector-j-8.1.0.jar-2}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
